syntax = "proto3";

option csharp_namespace = "cst_back.Protos";

package instances;

service RPCInstance {
	rpc GetInstances (InstancesRequest) returns (stream InstancesResponse);
}

message InstancesRequest {
	string filter = 1;
}

message InstancesResponse {
	string civilisation = 1;
	string goal = 2;
	string map = 3;
}